force-app/main/default/objects/Contrato2__c/fields/FrecuenciaFacturacion__c.field-meta.xml
<CustomField>
    <fullName>FrecuenciaFacturacion__c</fullName>
    <label>Frecuencia de Facturación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A Demanda</fullName>
            </value>
            <value>
                <fullName>Semanal</fullName>
            </value>
            <value>
                <fullName>Quincenal</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
            <value>
                <fullName>Semanal &amp; Mensual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>