force-app/main/default/objects/Contrato2__c/fields/FrecuenciaPedidoMantto__c.field-meta.xml
<CustomField>
    <fullName>FrecuenciaPedidoMantto__c</fullName>
    <description>Mantenimiento. Frecuencia con la que el cliente hará sus pedidos</description>
    <label>Frecuencia de pedido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semanal</fullName>
            </value>
            <value>
                <fullName>Quincenal</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>