force-app/main/default/objects/Contrato2__c/fields/FrecuenciaReposicion_PL__c.field-meta.xml
<CustomField>
    <fullName>FrecuenciaReposicion_PL__c</fullName>
    <label>Frecuencia de Reposición</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diario</fullName>
            </value>
            <value>
                <fullName>Semanal</fullName>
            </value>
            <value>
                <fullName>Quincenal</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>