force-app/main/default/objects/Contrato2__c/fields/fuelBrand__c.field-meta.xml
<CustomField>
    <fullName>fuelBrand__c</fullName>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Akron</fullName>
            </value>
            <value>
                <fullName>BP</fullName>
            </value>
            <value>
                <fullName>Chevron</fullName>
            </value>
            <value>
                <fullName>CONAPEZCA</fullName>
                <label>CONAPESCA</label>
            </value>
            <value>
                <fullName>Durafuel</fullName>
            </value>
            <value>
                <fullName>G500</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Gulf</fullName>
            </value>
            <value>
                <fullName>Kirkland</fullName>
            </value>
            <value>
                <fullName>Mobil</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Pemex</fullName>
            </value>
            <value>
                <fullName>Repsol</fullName>
            </value>
            <value>
                <fullName>Shell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>