force-app/main/default/objects/Contrato2__c/fields/Garantia_Negociando__c.field-meta.xml
<CustomField>
    <fullName>Garantia_Negociando__c</fullName>
    <label>¿Qué Garantía Estoy Negociando?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>