force-app/main/default/objects/Contrato2__c/fields/GPS_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>GPS_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GPS</label>
    <type>Checkbox</type>
</CustomField>