force-app/main/default/objects/Contrato2__c/fields/GrupoConsolidacion__c.field-meta.xml
<CustomField>
    <fullName>GrupoConsolidacion__c</fullName>
    <description>Campo creado para xml de Ticket Car 3.0</description>
    <label>Grupo Consolidación</label>
    <length>32</length>
    <type>Text</type>
</CustomField>