force-app/main/default/objects/Contrato2__c/fields/GrupoFacturacionGlobal_Text__c.field-meta.xml
<CustomField>
    <fullName>GrupoFacturacionGlobal_Text__c</fullName>
    <label>Grupo Facturación Global</label>
    <length>255</length>
    <type>Text</type>
</CustomField>