force-app/main/default/objects/Contrato2__c/fields/Identificacion_Oficial_Vigente__c.field-meta.xml
<CustomField>
    <fullName>Identificacion_Oficial_Vigente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identificacion Oficial Vigente</label>
    <type>Checkbox</type>
</CustomField>