force-app/main/default/objects/Contrato2__c/fields/IdPlantilla__c.field-meta.xml
<CustomField>
    <fullName>IdPlantilla__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IdPlantilla</label>
    <referenceTo>PlantillaContrato__c</referenceTo>
    <relationshipName>Contratos2</relationshipName>
    <type>Lookup</type>
</CustomField>