force-app/main/default/objects/Contrato2__c/fields/ImprimeLogo__c.field-meta.xml
<CustomField>
    <fullName>ImprimeLogo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Imprime Logo</label>
    <type>Checkbox</type>
</CustomField>