force-app/main/default/objects/Contrato2__c/fields/IntraseBranch__c.field-meta.xml
<CustomField>
    <fullName>IntraseBranch__c</fullName>
    <label>Sucursal Intrase</label>
    <length>10</length>
    <type>Text</type>
</CustomField>