force-app/main/default/objects/Contrato2__c/fields/InventoryControl__c.field-meta.xml
<CustomField>
    <fullName>InventoryControl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Control de Inventario</label>
    <type>Checkbox</type>
</CustomField>