force-app/main/default/objects/Contrato2__c/fields/IsCard__c.field-meta.xml
<CustomField>
    <fullName>IsCard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tarjeta</label>
    <type>Checkbox</type>
</CustomField>