force-app/main/default/objects/Contrato2__c/fields/IsCLABE__c.field-meta.xml
<CustomField>
    <fullName>IsCLABE__c</fullName>
    <formula>ISPICKVAL(Bank_Account__r.PaymentType__c, &#39;Cuenta Bancaria&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es CLABE</label>
    <type>Checkbox</type>
</CustomField>