force-app/main/default/objects/Contrato2__c/fields/IsCreditCard__c.field-meta.xml
<CustomField>
    <fullName>IsCreditCard__c</fullName>
    <formula>ISPICKVAL( Bank_Account__r.PaymentType__c , &#39;Tarjeta&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es Tarjeta Crédito</label>
    <type>Checkbox</type>
</CustomField>