force-app/main/default/objects/Contrato2__c/fields/IsFixedAmount__c.field-meta.xml
<CustomField>
    <fullName>IsFixedAmount__c</fullName>
    <formula>ISPICKVAL( AmountType__c , &#39;Fijo&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es Importe Fijo</label>
    <type>Checkbox</type>
</CustomField>