force-app/main/default/objects/Contrato2__c/fields/IsPaper__c.field-meta.xml
<CustomField>
    <fullName>IsPaper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vale Papel</label>
    <type>Checkbox</type>
</CustomField>