force-app/main/default/objects/Contrato2__c/fields/IsVariableAmount__c.field-meta.xml
<CustomField>
    <fullName>IsVariableAmount__c</fullName>
    <formula>ISPICKVAL( AmountType__c , &#39;Variable&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es Importe Variable</label>
    <type>Checkbox</type>
</CustomField>