force-app/main/default/objects/Contrato2__c/fields/Item_Contratacion__c.field-meta.xml
<CustomField>
    <fullName>Item_Contratacion__c</fullName>
    <label>Item Contratación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TC Avanzado</fullName>
            </value>
            <value>
                <fullName>TC Basico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>