force-app/main/default/objects/Contrato2__c/fields/Ligado_a__c.field-meta.xml
<CustomField>
    <fullName>Ligado_a__c</fullName>
    <label>Ligado a</label>
    <length>255</length>
    <type>Text</type>
</CustomField>