force-app/main/default/objects/Contrato2__c/fields/Linea_Operativa__c.field-meta.xml
<CustomField>
    <fullName>Linea_Operativa__c</fullName>
    <label>Línea Operativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>