force-app/main/default/objects/Contrato2__c/fields/LineasImpresionTarjeta__c.field-meta.xml
<CustomField>
    <fullName>LineasImpresionTarjeta__c</fullName>
    <label>Líneas de Impresión en Tarjeta</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blanco (9)</fullName>
            </value>
            <value>
                <fullName>Nombre de Empresa (4)</fullName>
            </value>
            <value>
                <fullName>Placa Vehículo (6)</fullName>
            </value>
            <value>
                <fullName>Centro de Costos (14)</fullName>
            </value>
            <value>
                <fullName>Nombre en Tarjeta (20)</fullName>
            </value>
            <value>
                <fullName>Nombre de la Base (3)</fullName>
            </value>
            <value>
                <fullName>Nombre del Consolidador (5)</fullName>
            </value>
            <value>
                <fullName>Dato Personalizado (7)</fullName>
            </value>
            <value>
                <fullName>Número de Tarjeta (12)</fullName>
            </value>
            <value>
                <fullName>Patio (13)</fullName>
            </value>
            <value>
                <fullName>Unidad de Entrega (15)</fullName>
            </value>
            <value>
                <fullName>Región (18)</fullName>
            </value>
            <value>
                <fullName>Grupo Región (19)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>