force-app/main/default/objects/Contrato2__c/fields/MainContract__c.field-meta.xml
<CustomField>
    <fullName>MainContract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrato Principal</label>
    <type>Checkbox</type>
</CustomField>