force-app/main/default/objects/Contrato2__c/fields/Maneja_Conductores__c.field-meta.xml
<CustomField>
    <fullName>Maneja_Conductores__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maneja Conductores</label>
    <type>Checkbox</type>
</CustomField>