force-app/main/default/objects/Contrato2__c/fields/Maneja_Nota_Vale__c.field-meta.xml
<CustomField>
    <fullName>Maneja_Nota_Vale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maneja Nota Vale</label>
    <type>Checkbox</type>
</CustomField>