force-app/main/default/objects/Contrato2__c/fields/ManejaAutoconsumo_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>ManejaAutoconsumo_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maneja Autoconsumo</label>
    <type>Checkbox</type>
</CustomField>