force-app/main/default/objects/Contrato2__c/fields/ManejaAutoconsumoLetra_Text__c.field-meta.xml
<CustomField>
    <fullName>ManejaAutoconsumoLetra_Text__c</fullName>
    <label>Maneja Autoconsumo en Letra</label>
    <length>25</length>
    <type>Text</type>
</CustomField>