force-app/main/default/objects/Contrato2__c/fields/Maquila__c.field-meta.xml
<CustomField>
    <fullName>Maquila__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si tiene un maquilador especifico</description>
    <label>Maquila</label>
    <type>Checkbox</type>
</CustomField>