force-app/main/default/objects/Contrato2__c/fields/MaxOfflineTransactionsAmount__c.field-meta.xml
<CustomField>
    <fullName>MaxOfflineTransactionsAmount__c</fullName>
    <label>Monto Máximo de Transacciones Offline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>