force-app/main/default/objects/Contrato2__c/fields/MaxOfflineTransactionsQuantity__c.field-meta.xml
<CustomField>
    <fullName>MaxOfflineTransactionsQuantity__c</fullName>
    <label>Cantidad Máxima de Transacciones Offline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>