force-app/main/default/objects/Contrato2__c/fields/Modo_Transaccion__c.field-meta.xml
<CustomField>
    <fullName>Modo_Transaccion__c</fullName>
    <label>Modo Transacción</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fisico</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>