force-app/main/default/objects/Contrato2__c/fields/ModoOffline__c.field-meta.xml
<CustomField>
    <fullName>ModoOffline__c</fullName>
    <label>Modo Offline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cliente NO opera offline</fullName>
            </value>
            <value>
                <fullName>Cliente elige cómo operar</fullName>
            </value>
            <value>
                <fullName>Cliente opera offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>