force-app/main/default/objects/Contrato2__c/fields/ModoOperacionCliente_PL__c.field-meta.xml
<CustomField>
    <fullName>ModoOperacionCliente_PL__c</fullName>
    <label>Modo de operación del Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opera solo</fullName>
            </value>
            <value>
                <fullName>No opera solo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>