force-app/main/default/objects/Contrato2__c/fields/MontoEstimadoConsumoMensual__c.field-meta.xml
<CustomField>
    <fullName>MontoEstimadoConsumoMensual__c</fullName>
    <description>Probabilidad de consumo por cliente</description>
    <label>Monto estimado de consumo mensual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>