force-app/main/default/objects/Contrato2__c/fields/MontoGarantia__c.field-meta.xml
<CustomField>
    <fullName>MontoGarantia__c</fullName>
    <label>Monto Garantia</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>