force-app/main/default/objects/Contrato2__c/fields/No_Mostrar_Km__c.field-meta.xml
<CustomField>
    <fullName>No_Mostrar_Km__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Mostrar Km</label>
    <type>Checkbox</type>
</CustomField>