force-app/main/default/objects/Contrato2__c/fields/Nombre_de_Personalizacion__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Personalizacion__c</fullName>
    <label>Nombre de Personalización</label>
    <length>255</length>
    <type>Text</type>
</CustomField>