force-app/main/default/objects/Contrato2__c/fields/NombreEmpresaPrincipal_Text__c.field-meta.xml
<CustomField>
    <fullName>NombreEmpresaPrincipal_Text__c</fullName>
    <label>Nombre Empresa Principal</label>
    <length>250</length>
    <type>Text</type>
</CustomField>