force-app/main/default/objects/Contrato2__c/fields/Opcion_Habilitada_ATM__c.field-meta.xml
<CustomField>
    <fullName>Opcion_Habilitada_ATM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opcion Habilitada ATM</label>
    <type>Checkbox</type>
</CustomField>