force-app/main/default/objects/Contrato2__c/fields/Opera_TC_Truck__c.field-meta.xml
<CustomField>
    <fullName>Opera_TC_Truck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opera TC Truck</label>
    <type>Checkbox</type>
</CustomField>