force-app/main/default/objects/Contrato2__c/fields/Oportunidad_FText__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_FText__c</fullName>
    <formula>HYPERLINK(&#39;https://edenredmexico.lightning.force.com/lightning/r/Opportunity/&#39;+PartidaPresupuesto__r.Quote.Opportunity.Id+&#39;/view&#39;, PartidaPresupuesto__r.Quote.Opportunity.Name)</formula>
    <label>Oportunidad</label>
    <type>Text</type>
</CustomField>