force-app/main/default/objects/Contrato2__c/fields/Otro__c.field-meta.xml
<CustomField>
    <fullName>Otro__c</fullName>
    <label>Otro</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>