force-app/main/default/objects/Contrato2__c/fields/Otros_correos__c.field-meta.xml
<CustomField>
    <fullName>Otros_correos__c</fullName>
    <label>Otros correos</label>
    <length>250</length>
    <type>Text</type>
</CustomField>