force-app/main/default/objects/Contrato2__c/fields/Pagare__c.field-meta.xml
<CustomField>
    <fullName>Pagare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pagaré</label>
    <type>Checkbox</type>
</CustomField>