force-app/main/default/objects/Contrato2__c/fields/PartidaPresupuesto__c.field-meta.xml
<CustomField>
    <fullName>PartidaPresupuesto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partida de presupuesto</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipName>Contratos2</relationshipName>
    <type>Lookup</type>
</CustomField>