force-app/main/default/objects/Contrato2__c/fields/paymentTermPaper__c.field-meta.xml
<CustomField>
    <fullName>paymentTermPaper__c</fullName>
    <label>Plazo de Pago Papel</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>