force-app/main/default/objects/Contrato2__c/fields/Periodo_Liberacion__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Liberacion__c</fullName>
    <label>Periodo de Liberación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semanal</fullName>
            </value>
            <value>
                <fullName>Quincenal</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>