force-app/main/default/objects/Contrato2__c/fields/Permite_autorizacion_telefonica__c.field-meta.xml
<CustomField>
    <fullName>Permite_autorizacion_telefonica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permite autorización telefónica</label>
    <type>Checkbox</type>
</CustomField>