force-app/main/default/objects/Contrato2__c/fields/PermiteCreacionFoliosAT_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>PermiteCreacionFoliosAT_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permite creación de Folios para AT</label>
    <type>Checkbox</type>
</CustomField>