force-app/main/default/objects/Contrato2__c/fields/Personalizacion_de_Tarjetas__c.field-meta.xml
<CustomField>
    <fullName>Personalizacion_de_Tarjetas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personalización de Tarjetas</label>
    <type>Checkbox</type>
</CustomField>