force-app/main/default/objects/Contrato2__c/fields/PlatformAdministrator__c.field-meta.xml
<CustomField>
    <fullName>PlatformAdministrator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Administrador de Plataforma</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Administración de Ventas (Administrador de Plataforma)</relationshipLabel>
    <relationshipName>Administracion_de_Ventas1</relationshipName>
    <type>Lookup</type>
</CustomField>