force-app/main/default/objects/Contrato2__c/fields/Porcentaje_Comision__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Comision__c</fullName>
    <label>% Comisión</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>