force-app/main/default/objects/Contrato2__c/fields/Prices__c.field-meta.xml
<CustomField>
    <fullName>Prices__c</fullName>
    <label>Precio</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0 - $100</fullName>
            </value>
            <value>
                <fullName>$101 - $200</fullName>
            </value>
            <value>
                <fullName>$201 - $400</fullName>
            </value>
            <value>
                <fullName>+$400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>