force-app/main/default/objects/Contrato2__c/fields/PrimeGroupName__c.field-meta.xml
<CustomField>
    <fullName>PrimeGroupName__c</fullName>
    <label>Nombre Empresa Principal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>