force-app/main/default/objects/Contrato2__c/fields/PrimeId__c.field-meta.xml
<CustomField>
    <fullName>PrimeId__c</fullName>
    <label>Id Prime</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>