force-app/main/default/objects/Contrato2__c/fields/Primer_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Primer_Pedido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primer Pedido</label>
    <type>Checkbox</type>
</CustomField>