force-app/main/default/objects/Contrato2__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <formula>PartidaPresupuesto__r.Quote.Opportunity.Producto_cotizacion__c</formula>
    <label>Producto</label>
    <type>Text</type>
</CustomField>