force-app/main/default/objects/Contrato2__c/fields/Producto_Factura_Global__c.field-meta.xml
<CustomField>
    <fullName>Producto_Factura_Global__c</fullName>
    <label>Producto Factura Global</label>
    <length>255</length>
    <type>Text</type>
</CustomField>