force-app/main/default/objects/Contrato2__c/fields/PropietarioOportunidad_FText__c.field-meta.xml
<CustomField>
    <fullName>PropietarioOportunidad_FText__c</fullName>
    <formula>Owner:User.FirstName + &#39; &#39; +  Owner:User.LastName</formula>
    <label>Propietario de la Oportunidad</label>
    <type>Text</type>
</CustomField>