force-app/main/default/objects/Contrato2__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Proveedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VEGA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>