force-app/main/default/objects/Contrato2__c/fields/RejectionReasons__c.field-meta.xml
<CustomField>
    <fullName>RejectionReasons__c</fullName>
    <label>Motivos de Rechazo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RejectionReasons</valueSetName>
    </valueSet>
</CustomField>