force-app/main/default/objects/Contrato2__c/fields/RepresentanteLegal__c.field-meta.xml
<CustomField>
    <fullName>RepresentanteLegal__c</fullName>
    <label>Representante Legal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>