force-app/main/default/objects/Contrato2__c/fields/Seccion1__c.field-meta.xml
<CustomField>
    <fullName>Seccion1__c</fullName>
    <label>Seccion 1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Tipo_Contrato__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Frecuencia_de_Pedido__c</fullName>
            </value>
            <value>
                <fullName>Personalizacion_de_Tarjetas__c</fullName>
            </value>
            <value>
                <fullName>Nombre_de_Personalizacion__c</fullName>
            </value>
            <value>
                <fullName>ImprimeLogo__c</fullName>
            </value>
            <value>
                <fullName>TipoPlastico__c</fullName>
            </value>
            <value>
                <fullName>LineasImpresionTarjeta__c</fullName>
            </value>
            <value>
                <fullName>Seccion2__c</fullName>
            </value>
            <value>
                <fullName>Seccion3__c</fullName>
            </value>
            <value>
                <fullName>Seccion4__c</fullName>
            </value>
            <value>
                <fullName>Seccion5__c</fullName>
            </value>
            <value>
                <fullName>Seccion6__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>