force-app/main/default/objects/Contrato2__c/fields/Seccion2__c.field-meta.xml
<CustomField>
    <fullName>Seccion2__c</fullName>
    <label>Seccion 2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Tipo_Contrato__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ComoFactura__c</fullName>
            </value>
            <value>
                <fullName>TipoCliente__c</fullName>
            </value>
            <value>
                <fullName>CEO__c</fullName>
            </value>
            <value>
                <fullName>DiscountFree__c</fullName>
            </value>
            <value>
                <fullName>CondicionesPagoPlazo__c</fullName>
            </value>
            <value>
                <fullName>ComisionMinima__c</fullName>
            </value>
            <value>
                <fullName>FrecuenciaFacturacion__c</fullName>
            </value>
            <value>
                <fullName>EspecialDia__c</fullName>
            </value>
            <value>
                <fullName>Cosolidador__c</fullName>
            </value>
            <value>
                <fullName>Ligado_a__c</fullName>
            </value>
            <value>
                <fullName>Tipo_de_Facturacion__c</fullName>
            </value>
            <value>
                <fullName>Producto_Factura_Global__c</fullName>
            </value>
            <value>
                <fullName>Sucursal_Facturacion_Global__c</fullName>
            </value>
            <value>
                <fullName>Facturacion_Cargos__c</fullName>
            </value>
            <value>
                <fullName>Facturacion_Plasticos__c</fullName>
            </value>
            <value>
                <fullName>Facturacion_Comision__c</fullName>
            </value>
            <value>
                <fullName>Deduce__c</fullName>
            </value>
            <value>
                <fullName>CorreoRecibeFactura__c</fullName>
            </value>
            <value>
                <fullName>PeriodicidadComplemento__c</fullName>
            </value>
            <value>
                <fullName>Emision_complemento__c</fullName>
            </value>
            <value>
                <fullName>FrecuenciaEstadoCuenta__c</fullName>
            </value>
            <value>
                <fullName>Cliente_Facturacion_Global__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>