force-app/main/default/objects/Contrato2__c/fields/Seccion3__c.field-meta.xml
<CustomField>
    <fullName>Seccion3__c</fullName>
    <label>Seccion 3</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Tipo_Contrato__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Linea_Operativa__c</fullName>
            </value>
            <value>
                <fullName>Ventana_de_Riesgos__c</fullName>
            </value>
            <value>
                <fullName>Frecuencia_Liberacion_Automatica__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>