force-app/main/default/objects/Contrato2__c/fields/SegmentoCuenta_FText__c.field-meta.xml
<CustomField>
    <fullName>SegmentoCuenta_FText__c</fullName>
    <formula>Cuenta__r.Segmento2__c</formula>
    <label>Segmento</label>
    <type>Text</type>
</CustomField>