force-app/main/default/objects/Contrato2__c/fields/SemaforoAtencion__c.field-meta.xml
<CustomField>
    <fullName>SemaforoAtencion__c</fullName>
    <formula>IF( NOT(ISNULL(PartidaPresupuesto__r.Quote.Opportunity.FechaInicioADV__c)) ,
IF(((IF(ISNULL(PartidaPresupuesto__r.Quote.Opportunity.FechaFinADV__c),NOW(),PartidaPresupuesto__r.Quote.Opportunity.FechaFinADV__c)-PartidaPresupuesto__r.Quote.Opportunity.FechaInicioADV__c)*24)&lt;=18,
IMAGE(&quot;/servlet/servlet.FileDownload?file=01561000002zaUF&quot;,&quot;&quot;, 40, 40),
IF(AND(((IF(ISNULL(PartidaPresupuesto__r.Quote.Opportunity.FechaFinADV__c),NOW(),PartidaPresupuesto__r.Quote.Opportunity.FechaFinADV__c)-PartidaPresupuesto__r.Quote.Opportunity.FechaInicioADV__c)*24)&gt;18,((IF(ISNULL(PartidaPresupuesto__r.Quote.Opportunity.FechaFinADV__c),NOW(),PartidaPresupuesto__r.Quote.Opportunity.FechaFinADV__c)-PartidaPresupuesto__r.Quote.Opportunity.FechaInicioADV__c)*24)&lt;=24),
IMAGE(&quot;/servlet/servlet.FileDownload?file=01561000002zaUK&quot;,&quot;&quot;, 40, 40),
IMAGE(&quot;/servlet/servlet.FileDownload?file=01561000002zaUP&quot;,&quot;&quot;, 40, 40))),
IMAGE(&quot;/servlet/servlet.FileDownload?file=01561000002zaUU&quot;,&quot;&quot;, 40, 40))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semáforo de Atención</label>
    <type>Text</type>
</CustomField>