force-app/main/default/objects/Contrato2__c/fields/stationId__c.field-meta.xml
<CustomField>
    <fullName>stationId__c</fullName>
    <label>Id Estación</label>
    <length>50</length>
    <type>Text</type>
</CustomField>