force-app/main/default/objects/Contrato2__c/fields/Sucursal_Facturacion_Global__c.field-meta.xml
<CustomField>
    <fullName>Sucursal_Facturacion_Global__c</fullName>
    <label>Sucursal Facturación Global</label>
    <length>255</length>
    <type>Text</type>
</CustomField>