force-app/main/default/objects/Contrato2__c/fields/TicketBomba__c.field-meta.xml
<CustomField>
    <fullName>TicketBomba__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ticket Bomba</label>
    <type>Checkbox</type>
</CustomField>